# sae-spelling

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: ci.yaml
sae_spelling/: baseline.py  feature_ablation.py  feature_absorption_calculator.py  feature_attribution.py  interventions.py  probing.py  prompting.py  sae_utils.py  spelling_grader.py  torch_utils.py  util.py  vocab.py
sae_spelling/experiments/: common.py  encoder_auroc_and_f1.py  feature_absorption.py  k_sparse_probing.py  latent_evaluation.py
tests/: conftest.py  test_baseline.py  test_feature_ablation.py  test_feature_absorption_calculator.py  test_feature_attribution.py  test_probing.py  test_prompting.py  test_sae_utils.py  test_spelling_grader.py  test_util.py  test_vocab.py
tests/_comparison/: feature_circuits_attribution.py  joseph_grad_attrib.py
tests/experiments/: test_common.py  test_encoder_auroc_and_f1.py  test_feature_absorption.py  test_k_sparse_probing.py  test_latent_evaluation.py
tests/experiments/__snapshots__/: test_common.ambr  test_encoder_auroc_and_f1.ambr  test_feature_absorption.ambr  test_k_sparse_probing.ambr  test_latent_evaluation.ambr
